--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </style>
 </head>
 <body>
-    <button class="download-btn" onclick="downloadPDF()">Download PDF</button>
+    <--<button class="download-btn" onclick="downloadPDF()">Download PDF</button>-->
     <div class="reveal">
         <div class="slides">
             <!-- Slide 1: Introduction -->
@@ -115,7 +115,7 @@
                 <p>Presented by E. Désiré Nzengou</p>
                 <p><a href="mailto:desire.nzengou@euspa.europa.eu" style="color: white;">desire.nzengou@euspa.europa.eu</a>, <a href="mailto:des@desiredsolutions.me" style="color: white;">des@desiredsolutions.me</a> | Satellite Communication Working Group</p>
                 <p class="fragment fade-in">"The Nordics—Sweden, Norway, Denmark, Finland, Iceland—can lead in space."</p>
-                <div class="footer"><a href="http://desiredsolutions.me">desiredsolutions.me</a> | Désiré | Nordic Space Summit, March 2025</div>
+                <div class="footer"><a href="http://desiredsolutions.me" styl:"color= grey">desiredsolutions.me</a> | Désiré | Nordic Space Summit, March 2025</div>
             </section>
 
             <!-- Slide 2: Current Status -->
@@ -192,7 +192,7 @@
                 <div class="contact fragment fade-in">
                     <p>Get in Touch: <a href="mailto:desire.nzengou@euspa.europa.eu" style="color: white;">desire.nzengou@euspa.europa.eu</a></p>
                 </div>
-                <div class="footer"><a href="http://desiredsolutions.me">desiredsolutions.me</a> | Désiré | Nordic Space Summit, March 2025</div>
+                <div class="footer"><a href="http://desiredsolutions.me" style:"color= grey">desiredsolutions.me</a> | Désiré | Nordic Space Summit, March 2025</div>
             </section>
         </div>
     </div>
