--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <p class="fragment fade-in">Thank you!</p>
                 <p class="fragment fade-in">Your turn: Which step can you take first?</p>
                 <div class="contact fragment fade-in">
-                    <p>Get in Touch: <a href="mailto:desire.nzengou@euspa.europa.eu" style="color: white;">desire.nzengou@euspa.europa.eu</a></p>
+                    <p><a href="mailto:desire.nzengou@euspa.europa.eu" style="color: white;"> Get in Touch!</a></p>
                 </div>
                 <div class="footer"><a href="http://desiredsolutions.me" style:"color= grey">desiredsolutions.me</a> | Désiré | Nordic Space Summit, March 2025</div>
             </section>
