--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </style>
 </head>
 <body>
-    <!--<button class="download-btn" onclick="downloadPDF()">Download PDF</button>--><button href="path_to_your_pdf_file.pdf" download="https://eu.docworkspace.com/d/sIFTbvKSrAo-U5L4G?lg=en-US&sa=601.1074&ps=1&fn=nss2025_mypreso_dn.pdf">
+    <!--<button class="download-btn" onclick="downloadPDF()">Download PDF</button>--><button class="download-btn" onclick="downloadPDF()" href="nss2025_mypreso_dn.pdf" download="https://eu.docworkspace.com/d/sIFTbvKSrAo-U5L4G?lg=en-US&sa=601.1074&ps=1&fn=nss2025_mypreso_dn.pdf">
   Download PDF
 </button>
     <div class="reveal">
