--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </style>
 </head>
 <body>
-    <button class="download-btn"><a href="nss2025_mypreso_dn.pdf" download="https://eu.docworkspace.com/d/sIFTbvKSrAo-U5L4G?lg=en-US&sa=601.1074&ps=1&fn=nss2025_mypreso_dn.pdf" style:"color=white">Download PDF</a></button>
+    <button class="download-btn"><a href="nss2025_mypreso_dn.pdf" download="https://eu.docworkspace.com/d/sIFTbvKSrAo-U5L4G?lg=en-US&sa=601.1074&ps=1&fn=nss2025_mypreso_dn.pdf" style="color:white">Download PDF</a></button>
 <!--<button class="download-btn" onclick="downloadPDF()" href="nss2025_mypreso_dn.pdf" download="https://eu.docworkspace.com/d/sIFTbvKSrAo-U5L4G?lg=en-US&sa=601.1074&ps=1&fn=nss2025_mypreso_dn.pdf">
   Download PDF
 </button>-->
@@ -118,19 +118,19 @@
                 <p>Presented by E. Désiré Nzengou</p>
                 <p><a href="mailto:desire.nzengou@euspa.europa.eu" style="color: white;">desire.nzengou@euspa.europa.eu</a>, <a href="mailto:des@desiredsolutions.me" style="color: white;">des@desiredsolutions.me</a> | Satellite Communication Working Group</p>
                 <p class="fragment fade-in">"The Nordics—Sweden, Norway, Denmark, Finland, Iceland—can lead in space."</p>
-                <div class="footer"><a href="http://desiredsolutions.me" style:"color= grey">desiredsolutions.me</a> | Désiré | Nordic Space Summit, March 2025</div>
+                <div class="footer"><a href="http://desiredsolutions.me" style="color: #666">desiredsolutions.me</a> | Désiré | Nordic Space Summit, March 2025</div>
             </section>
 
             <!-- Slide 2: Current Status -->
             <section>
                 <h2>Where We Stand Today</h2>
-                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/nordics_500x366.jpg?v=1742246895755" class="fragment fade-in" alt="ESA + EUSPA">
+                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/nordics_500x366.jpg?v=1742246895755" class="fragment fade-in" alt="Nordic map">
                 <ul class="fragment fade-in">
                     <li><strong>Nordic Actors</strong>: Sweden (industry), Norway (funding), Denmark (downstream), Finland (cybersecurity), Iceland (remote sensing)</li>
-                    <li><strong>ESA & EUSPA</strong>: Active but fragmented participation</li>
+                    <li><strong>ESA &amp; EUSPA</strong>: Active but fragmented participation</li>
                     <li><strong>"We’re players, not yet a team."</strong></li>
                 </ul>
-                <p class="quote fragment fade-in">A zero-sum game approach to innovation & entrepreneurship is too often the standard.</p>
+                <p class="quote fragment fade-in">A zero-sum game approach to innovation &amp; entrepreneurship is too often the standard.</p>
                 <div class="footer">Désiré | Nordic Space Summit, March 2025</div>
             </section>
 
@@ -139,9 +139,9 @@
                 <h2>Our Collective Edge</h2>
                 <h3>Focus Areas</h3>
                 <ul class="fragment fade-in">
-                    <li>Satcom => Satellite Communications (Norway)</li>
-                    <li>Cyber => Cybersecurity (Finland)</li>
-                    <li>Data => Downstream Apps (Denmark, Iceland)</li>
+                    <li>Satcom -> Satellite Communications (Norway)</li>
+                    <li>Cyber -> Cybersecurity (Finland)</li>
+                    <li>Data -> Downstream Apps (Denmark, Iceland)</li>
                 </ul>
                 <p class="fragment fade-in"><strong>Roles</strong>: Sweden (tech), Norway (funds), Denmark (sales), Finland (cyber), Iceland (data)</p>
                 <div class="footer">Désiré | Nordic Space Summit, March 2025</div>
@@ -150,7 +150,8 @@
             <!-- Slide 4: Building with Europe -->
             <section>
                 <h2>Smart Collaboration</h2>
-                <p>ESA + EUSPA</p>
+                <p></p>
+                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/esa-euspa.png?v=1742310904529.jpg?v=1742246895755" class="fragment fade-in" alt="ESA + EUSPA">
                 <ul class="fragment fade-in">
                     <li><strong>Leverage</strong>: ESA ARTES, EUSPA CASSINI</li>
                     <li><strong>Consortium</strong>: Unified Nordic front</li>
@@ -188,14 +189,14 @@
 
             <!-- Slide 7: Call to Action -->
             <section class="title-slide">
-                <h2>Let’s Lead Together</h2>
+                <h2 style="color: white">Let’s Lead Together</h2>
                 <p class="fragment fade-in">"Join the Nordic Satcom Consortium. Start in 2025."</p>
                 <p class="fragment fade-in">Thank you!</p>
-                <p class="fragment fade-in">Your turn: Which step can you take first?</p>
+              <p class="fragment fade-in">Your turn: <b>Which step can you take first?</b></p>
                 <div class="contact fragment fade-in">
                     <p><a href="mailto:desire.nzengou@euspa.europa.eu" style="color: white;"> Get in Touch!</a></p>
                 </div>
-                <div class="footer"><a href="http://desiredsolutions.me" style:"color= grey">desiredsolutions.me</a> | Désiré | Nordic Space Summit, March 2025</div>
+                <div class="footer">Désiré | Nordic Space Summit, March 2025</div>
             </section>
         </div>
     </div>
