--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
             <section class="title-slide">
                 <h1>Nordic Synergy in Satellite Communications</h1>
                 <h3>A Unified Future</h3>
-                <p>Presented by E. Désiré Nzengou</p>
-                <p><a href="mailto:desire.nzengou@euspa.europa.eu" style="color: white;">desire.nzengou@euspa.europa.eu</a>, <a href="mailto:des@desiredsolutions.me" style="color: white;">des@desiredsolutions.me</a> | Satellite Communication Working Group</p>
+                <p>Presented by Désiré</p>
+                <p><a href="mailto:..." style="color: white;">des@email.me</a> | Satellite Communication Working Group</p>
                 <p class="fragment fade-in">"The Nordics—Sweden, Norway, Denmark, Finland, Iceland—can lead in space."</p>
-                <div class="footer"><a href="http://desiredsolutions.me" style="color: #666">desiredsolutions.me</a> | Désiré | Nordic Space Summit, March 2025</div>
+                <div class="footer"> Désiré | Nordic Space Summit, March 2025</div>
             </section>
 
             <!-- Slide 2: Current Status -->
