--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                 <h1>Opportunities and Challenges for Tech Entrepreneurs</h1>
                 <h3>Building Innovative Solutions with EU Space Technology</h3>
                 <p>Focus on Sweden in a Nordic Context, with Global Scaling Potential</p>
-                <p>Presented by E. Désiré Nzengou</p>
-                <p><a href="mailto:nzengou@geoville.com" style="color: white;">nzengou@geoville.com</a> | October 2025</p>
+                <p>Presented by DN</p>
+                <p><a href="mailto:" style="color: white;">me@email.ne</a> | October 2025</p>
                 <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: Welcome the audience. Briefly introduce yourself and the topic: "Today, we'll explore how tech entrepreneurs can harness EU space tech through the CASSINI initiative, with a spotlight on Sweden's role in the Nordics and beyond." -->
             </section>
