--- a/index.html
+++ b/index.html
@@ -210,10 +210,25 @@
                 <h1>Opportunities and Challenges for Tech Entrepreneurs</h1>
                 <h3>Building Innovative Solutions with EU Space Technology</h3>
                 <p>Focus on Sweden in a Nordic Context, with Global Scaling Potential</p>
-                <p>Presented by DN</p>
-                <p><a href="mailto:" style="color: white;">me@email.ne</a> | October 2025</p>
+                <p>Presented by E. Désiré Nzengou</p>
+                <p><a href="mailto:nzengou@geoville.com" style="color: white;">nzengou@geoville.com</a> | October 2025</p>
                 <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: Welcome the audience. Briefly introduce yourself and the topic: "Today, we'll explore how tech entrepreneurs can harness EU space tech through the CASSINI initiative, with a spotlight on Sweden's role in the Nordics and beyond." -->
+            </section>
+
+            <!-- Slide 13: About Me -->
+            <section role="region" aria-label="About Me">
+                <h2>About Me: E. Désiré Nzengou</h2>
+                <img src="https://cdn.glitch.global/bfd04a66-a61f-4886-964d-7924f29d0346/240604_NOVASPACE-187%20(1).jpg?v=1745856711941" class="fragment fade-in" alt="E. Désiré Nzengou portrait" style="border: 1px solid #ddd; border-radius: 8px; padding: 5px; width: 200px;">
+                <ul class="fragment fade-in">
+                    <li><strong>Background</strong>: B.A. Industrial Sciences, M.A. Engineering Physics, Data Science Certificate (Johns Hopkins), Management (ICHEC)</li>
+                    <li><strong>Experience</strong>: 4-5 years as Space Downstream Innovation & Market Development Consultant at EUSPA’s Entrepreneurship Unit, mentoring startups in space tech, AI, Blockchain, Quantum</li>
+						<ol>Support on both technical and business development (including Business model innovation, GTM strategy and Internalization)</ol>
+                    <li><strong>Relevance</strong>: Expertise in leveraging EU space data (Copernicus, Galileo) for diverse sectors, aligning with CASSINI’s mission to drive innovation</li>
+                </ul>
+                <p class="quote fragment fade-in">My journey empowers me to guide entrepreneurs toward impactful solutions.</p>
+                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <!-- Speaker Notes: My academic background in engineering and data science, combined with my role at EUSPA, equips me to provide actionable insights for leveraging space tech. My experience with CASSINI initiatives ensures I understand the ecosystem’s needs and opportunities. -->
             </section>
 
             <!-- Slide 2: EU Space Programme Overview -->
@@ -262,11 +277,26 @@
                 <ul class="fragment fade-in">
                     <li><strong>Technical</strong>: AI/data integration; solved via CASSINI mentoring</li>
                     <li><strong>Market</strong>: Viability, competition; focus on unique solutions</li>
-                    <li><strong>Nordic</strong>: Harsh climates, small markets; cross-border collaboration</li>
+                    <li><strong>Nordic</strong>: Climates; Talent available but at small scale and unevenly distributed; Small markets spread across large areas; Cross-border collaboration</li>
                 </ul>
                 <p class="quote fragment fade-in">CASSINI empowers startups to overcome barriers and scale globally.</p>
                 <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: Challenges exist, like data integration and market entry, but CASSINI’s tools – from hackathons to accelerators – help overcome them, especially in the collaborative Nordic environment. -->
+            </section>
+
+            <!-- Slide 14: Swedish Space Innovation Ecosystem -->
+            <section role="region" aria-label="Swedish Space Innovation Ecosystem">
+                <h2>Swedish Space Innovation Ecosystem</h2>
+                <img src="https://cdn.glitch.global/a2ddbebc-d3f4-4151-a4df-5d1b58765ad0/sweden-map.jpg" class="fragment fade-in" alt="Map of Sweden highlighting space innovation hubs">
+                <ul class="fragment fade-in">
+                    <li><strong>Opportunities</strong>: Nationwide adoption across sectors (e.g., forestry, mining, finance and insurrance) via EU scale; Kiruna spaceport, ESA-BICs Sweden</li>
+                    <li><strong>Resistance</strong>: High-risk aversion, Strong focus on Fintech and E-commerce vs low traction in Deep Tech and Space Tech tracks; Abundant pre-seed/angel funding, grants (Almi/Vinnova) create dependency.
+						<ol>Easy access to the US market creates strategic weaknesses (over-reliance on the american market to grow), removes incentives to expand internationally to other EU countries (expect to UK and Germany);</ol>
+						<ol>Lack of cultural diversity within organizations blinds us from opportunities beyond EU & US (Asia beyond China, Africa, Latin America)</ol></li>
+                    <li><strong>Solutions</strong>: Encourage cross-sector collaboration, incentivize risk-taking with CASSINI support, diversify funding sources</li>
+                </ul>
+                <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
+                <!-- Speaker Notes: Sweden’s ecosystem offers unique opportunities with its space infrastructure, but cultural and financial resistance can hinder growth. Strategic use of CASSINI and diverse funding can unlock its potential across industries. -->
             </section>
 
             <!-- Slide 6: Use Case 1 – Gaming and Consumer Solutions -->
@@ -360,7 +390,7 @@
                 <!-- Speaker Notes: Start in Sweden’s innovative Nordic context, then scale globally – CASSINI’s tools make this feasible, turning local solutions into international leaders. -->
             </section>
 
-            <!-- Slide 13: Conclusion and Call to Action -->
+            <!-- Slide 15: Conclusion and Call to Action -->
             <section class="title-slide" role="region" aria-label="Conclusion">
                 <h2 style="color: white">Conclusion and Call to Action</h2>
                 <ul class="fragment fade-in">
