--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
                 <ul class="fragment fade-in">
                     <li><strong>Background</strong>: B.A. Industrial Sciences, M.A. Engineering Physics, Data Science Certificate (Johns Hopkins), Management (ICHEC)</li>
                     <li><strong>Experience</strong>: 4-5 years as Space Downstream Innovation & Market Development Consultant at EUSPA’s Entrepreneurship Unit, mentoring startups in space tech, AI, Blockchain, Quantum</li>
-						<ol>Support on both technical and business development (including Business model innovation, GTM strategy and Internalization)</ol>
-                    <li><strong>Relevance</strong>: Expertise in leveraging EU space data (Copernicus, Galileo) for diverse sectors, aligning with CASSINI’s mission to drive innovation</li>
+						<ol>Support on both technical and business development (e.g. Business model innovation, GTM strategy, Internalization)</ol>
+                    <li><strong>Relevance</strong>: Expertise in leveraging EU space data (Copernicus, Galileo) for diverse sectors, aligning with EU’s goal to boost disruptive innovation</li>
                 </ul>
-                <p class="quote fragment fade-in">My journey empowers me to guide entrepreneurs toward impactful solutions.</p>
+                <p class="quote fragment fade-in">My journey empowers me to guide innovative organizations toward impactful solutions.</p>
                 <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: My academic background in engineering and data science, combined with my role at EUSPA, equips me to provide actionable insights for leveraging space tech. My experience with CASSINI initiatives ensures I understand the ecosystem’s needs and opportunities. -->
             </section>
@@ -291,9 +291,9 @@
                 <ul class="fragment fade-in">
                     <li><strong>Opportunities</strong>: Nationwide adoption across sectors (e.g., forestry, mining, finance and insurrance) via EU scale; Kiruna spaceport, ESA-BICs Sweden</li>
                     <li><strong>Resistance</strong>: High-risk aversion, Strong focus on Fintech and E-commerce vs low traction in Deep Tech and Space Tech tracks; Abundant pre-seed/angel funding, grants (Almi/Vinnova) create dependency.
-						<ol>Easy access to the US market creates strategic weaknesses (over-reliance on the american market to grow), removes incentives to expand internationally to other EU countries (expect to UK and Germany);</ol>
-						<ol>Lack of cultural diversity within organizations blinds us from opportunities beyond EU & US (Asia beyond China, Africa, Latin America)</ol></li>
-                    <li><strong>Solutions</strong>: Encourage cross-sector collaboration, incentivize risk-taking with CASSINI support, diversify funding sources</li>
+						<ol>Easy access to the US market creates strategic weaknesses (over-reliance on this market for growth), removes incentives to expand internationally to other EU countries (beyond the UK and Germany);</ol>
+						<ol>Lack of organization's cultural diversity shades opportunities beyond EU & US (especially emerging and developing economies)</ol></li>
+                    <li><strong>Solutions</strong>: Encourage cross-sector collaboration, locally and internationally. Incentivize risk-taking, leverage CASSINI EU-wide support. Diversify funding sources</li>
                 </ul>
                 <div class="footer">E. Désiré Nzengou | SWEO 2025, October 2025</div>
                 <!-- Speaker Notes: Sweden’s ecosystem offers unique opportunities with its space infrastructure, but cultural and financial resistance can hinder growth. Strategic use of CASSINI and diverse funding can unlock its potential across industries. -->
